# toylang

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  docs.bat  flake.nix  main.rs  overview.md  toylang.code-workspace  troubleshooting_notes.txt
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/implementors/native_windows_gui/: trait.NativeUi.js
docs/src/toylang/: ast.rs.html  compiler_runner.rs.html  debug_window_derive.rs.html  errors.rs.html  file.rs.html  formatting.rs.html  integration.rs.html  integration_tests.rs.html  lib.rs.html  parse.rs.html
docs/toylang/: all.html  fn.left_pad.html  fn.num_digits.html  fn.rem_first_and_last.html  index.html  sidebar-items.js  struct.Compiler.html  struct.DebugErrorStack.html  struct.DebugLinesOfChars.html  struct.DebugLinesOfTokens.html  struct.DebugLogs.html  type.ErrorStack.html  type.LinesOfChars.html  type.LinesOfTokens.html  type.Logs.html  type.Tokens.html
docs/toylang/ast/: fn.debug_flat_usize_array.html  fn.get_boolean_fns.html  fn.get_booleans.html  fn.get_elements.html  fn.init.html  (+13 more)
src/: assign.y  ast.rs  compiler_runner.rs  debug_window.rs  debug_window_derive.rs  element.rs  errors.rs  file.rs  formatting.rs  integration_tests.rs  lib.rs  main.rs  output.rs  output_game_ref.rs  parse.rs  program_format.y  server.rs  test.toy  test.y  test2.toy  test3.toy  test4_simple_wasd_game.toy
src/ast/: elements.rs  output.rs  parents.rs
src/integration/: integration_tests.rs
src/integration_tests/: doctests.rs
toylang_common/: Cargo.toml
toylang_common/src/: lib.rs  rustfmt.toml
toylang_macros/: .gitignore  Cargo.toml
toylang_macros/src/: example_tests.rs  lib.rs
toylang_macros/tests/: test_macros.rs
(+425 files in other folders)
