[package]
name = "toylang"
version = "0.1.0"
edition = "2021"
default-run = "toylang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }

[[bin]]
name = "toylang"
path = "src/main.rs"

[[bin]]
name = "output"